* Use new roundrect radius

--- a/components/chatcontrol/demo/frmmain.lfm
+++ b/components/chatcontrol/demo/frmmain.lfm
@@ -44,8 +44,21 @@ object MainChatForm: TMainChatForm
       LeftTextColor = clBlack
       RightTextColor = clBlack
       ItemSpacing = 8
-      ItemPadding = 8
+      ItemPadding = 24
       ItemMargin = 4
+      BaseFontSize = 10
+      MonoFontName = 'Monospace'
+      FontCodeColor = clInfoText
+      FontQuoteColor = clWindowFrame
+      HyperLinkColor = 13391121
+      BGCodeColor = clInfoBk
+      BulletChar1 = '•'
+      BulletChar2 = '◦'
+      BulletChar3 = '▪'
+      BlockQuoteIndent = 40
+      ExtraIndent = 0
+      ParagraphSpacing = 12
+      ImageMargin = 2
       Align = alClient
       ClientHeight = 470
       ClientWidth = 1070
