--- a/components/filebrowser/frmconfigfilebrowser.lfm
+++ b/components/filebrowser/frmconfigfilebrowser.lfm
@@ -5,6 +5,7 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   Width = 803
   ClientHeight = 618
   ClientWidth = 803
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 616
   DesignTop = 247
@@ -15,14 +16,14 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     Width = 803
     Align = alTop
     Caption = 'Root directory'
-    ClientHeight = 173
-    ClientWidth = 801
+    ClientHeight = 162
+    ClientWidth = 799
     TabOrder = 0
     object DERootDir: TDirectoryEdit
       Left = 38
-      Height = 34
+      Height = 32
       Top = 128
-      Width = 754
+      Width = 752
       ShowHidden = False
       ButtonWidth = 23
       NumGlyphs = 1
@@ -32,25 +33,25 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     end
     object RBRootThisDir: TRadioButton
       Left = 16
-      Height = 23
+      Height = 22
       Top = 96
-      Width = 191
+      Width = 175
       Caption = 'Always use this directory'
       TabOrder = 1
     end
     object RBRootFileSystemRoot: TRadioButton
       Left = 14
-      Height = 23
+      Height = 22
       Top = 36
-      Width = 131
+      Width = 117
       Caption = 'Filesystem root'
       TabOrder = 2
     end
     object RBRootUseProjectDir: TRadioButton
       Left = 14
-      Height = 23
+      Height = 22
       Top = 9
-      Width = 220
+      Width = 199
       Caption = 'Use current project directory'
       Checked = True
       TabOrder = 3
@@ -58,9 +59,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     end
     object RBRootUserDir: TRadioButton
       Left = 14
-      Height = 23
+      Height = 22
       Top = 64
-      Width = 122
+      Width = 111
       Caption = 'User directory'
       TabOrder = 4
     end
@@ -72,14 +73,14 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     Width = 803
     Align = alTop
     Caption = 'Initial directory'
-    ClientHeight = 134
-    ClientWidth = 801
+    ClientHeight = 123
+    ClientWidth = 799
     TabOrder = 1
     object DEStartDir: TDirectoryEdit
       Left = 38
-      Height = 34
+      Height = 32
       Top = 89
-      Width = 752
+      Width = 750
       ShowHidden = False
       ButtonWidth = 23
       NumGlyphs = 1
@@ -89,25 +90,25 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     end
     object RBThisDir: TRadioButton
       Left = 14
-      Height = 23
+      Height = 22
       Top = 65
-      Width = 191
+      Width = 175
       Caption = 'Always use this directory'
       TabOrder = 1
     end
     object RBLastDir: TRadioButton
       Left = 14
-      Height = 23
+      Height = 22
       Top = 36
-      Width = 198
+      Width = 180
       Caption = 'Use last opened directory'
       TabOrder = 2
     end
     object RBUseProjectDir: TRadioButton
       Left = 14
-      Height = 23
+      Height = 22
       Top = 8
-      Width = 220
+      Width = 199
       Caption = 'Use current project directory'
       Checked = True
       TabOrder = 3
@@ -121,30 +122,30 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     Width = 803
     Align = alTop
     Caption = 'Search'
-    ClientHeight = 111
-    ClientWidth = 801
+    ClientHeight = 100
+    ClientWidth = 799
     TabOrder = 2
     object CBMatchOnlyFilename: TCheckBox
       Left = 8
-      Height = 23
+      Height = 22
       Top = 16
-      Width = 223
+      Width = 207
       Caption = 'Search matches only filename'
       TabOrder = 0
     end
     object CBUseAbsoluteFilenames: TCheckBox
       Left = 8
-      Height = 23
+      Height = 22
       Top = 48
-      Width = 191
+      Width = 176
       Caption = 'Show absolute filenames'
       TabOrder = 1
     end
     object CBUseLetters: TCheckBox
       Left = 8
-      Height = 23
+      Height = 22
       Top = 81
-      Width = 285
+      Width = 260
       Caption = 'Match individual letters of search term'
       TabOrder = 2
     end
@@ -156,14 +157,14 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     Width = 803
     Align = alTop
     Caption = 'File browser tree'
-    ClientHeight = 95
-    ClientWidth = 801
+    ClientHeight = 84
+    ClientWidth = 799
     TabOrder = 3
     object CBShowFilesInline: TCheckBox
       Left = 24
-      Height = 23
+      Height = 22
       Top = 8
-      Width = 207
+      Width = 194
       Caption = 'Show files in main tree view'
       TabOrder = 0
       OnChange = CBShowFilesInlineChange
@@ -172,9 +173,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = CBShowFilesInline
       AnchorSideTop.Side = asrBottom
       Left = 52
-      Height = 23
-      Top = 39
-      Width = 218
+      Height = 22
+      Top = 38
+      Width = 197
       BorderSpacing.Top = 8
       Caption = 'Show directories before files'
       TabOrder = 1
@@ -184,9 +185,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = CBShowDirectoriesBeforeFiles
       AnchorSideTop.Side = asrBottom
       Left = 24
-      Height = 23
-      Top = 70
-      Width = 304
+      Height = 22
+      Top = 68
+      Width = 279
       BorderSpacing.Top = 8
       Caption = 'Keep synchronized with current editor file'
       TabOrder = 2
