--- a/components/filebrowser/frmconfigfilebrowser.lfm
+++ b/components/filebrowser/frmconfigfilebrowser.lfm
@@ -1,196 +1,186 @@
 object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   Left = 0
-  Height = 618
+  Height = 421
   Top = 0
-  Width = 803
-  ClientHeight = 618
-  ClientWidth = 803
+  Width = 504
+  ClientHeight = 421
+  ClientWidth = 504
   LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 616
   DesignTop = 247
   object GBStartDir1: TGroupBox
     Left = 0
-    Height = 191
+    Height = 159
     Top = 0
-    Width = 803
+    Width = 504
     Align = alTop
+    AutoSize = True
+    BorderSpacing.Bottom = 3
     Caption = 'Root directory'
-    ClientHeight = 162
-    ClientWidth = 799
+    ClientHeight = 130
+    ClientWidth = 500
     TabOrder = 0
     object DERootDir: TDirectoryEdit
-      Left = 38
+      AnchorSideLeft.Control = RBRootThisDir
+      AnchorSideTop.Control = RBRootThisDir
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = GBStartDir1
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = GBStartDir1
+      Left = 33
       Height = 32
-      Top = 128
-      Width = 752
+      Top = 94
+      Width = 442
       ShowHidden = False
       ButtonWidth = 23
       NumGlyphs = 1
       Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.Left = 25
+      BorderSpacing.Right = 25
+      BorderSpacing.Bottom = 4
       MaxLength = 0
       TabOrder = 0
     end
     object RBRootThisDir: TRadioButton
-      Left = 16
+      AnchorSideLeft.Control = RBRootUserDir
+      AnchorSideTop.Control = RBRootUserDir
+      AnchorSideTop.Side = asrBottom
+      Left = 8
       Height = 22
-      Top = 96
+      Top = 72
       Width = 175
       Caption = 'Always use this directory'
       TabOrder = 1
     end
     object RBRootFileSystemRoot: TRadioButton
-      Left = 14
+      AnchorSideLeft.Control = RBRootUseProjectDir
+      AnchorSideTop.Control = RBRootUseProjectDir
+      AnchorSideTop.Side = asrBottom
+      Left = 8
       Height = 22
-      Top = 36
+      Top = 25
       Width = 117
+      BorderSpacing.Top = 3
       Caption = 'Filesystem root'
       TabOrder = 2
     end
     object RBRootUseProjectDir: TRadioButton
-      Left = 14
+      AnchorSideLeft.Control = GBStartDir1
+      Left = 8
       Height = 22
-      Top = 9
+      Top = 0
       Width = 199
+      BorderSpacing.Left = 8
       Caption = 'Use current project directory'
       Checked = True
       TabOrder = 3
       TabStop = True
     end
     object RBRootUserDir: TRadioButton
-      Left = 14
+      AnchorSideLeft.Control = RBRootFileSystemRoot
+      AnchorSideTop.Control = RBRootFileSystemRoot
+      AnchorSideTop.Side = asrBottom
+      Left = 8
       Height = 22
-      Top = 64
+      Top = 50
       Width = 111
+      BorderSpacing.Top = 3
       Caption = 'User directory'
       TabOrder = 4
     end
   end
   object GBStartDir: TGroupBox
     Left = 0
-    Height = 152
-    Top = 191
-    Width = 803
+    Height = 137
+    Top = 162
+    Width = 504
     Align = alTop
+    AutoSize = True
+    BorderSpacing.Bottom = 3
     Caption = 'Initial directory'
-    ClientHeight = 123
-    ClientWidth = 799
+    ClientHeight = 108
+    ClientWidth = 500
     TabOrder = 1
     object DEStartDir: TDirectoryEdit
-      Left = 38
+      AnchorSideLeft.Control = RBThisDir
+      AnchorSideTop.Control = RBThisDir
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = GBStartDir
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = GBStartDir
+      Left = 33
       Height = 32
-      Top = 89
-      Width = 750
+      Top = 72
+      Width = 442
       ShowHidden = False
       ButtonWidth = 23
       NumGlyphs = 1
       Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.Left = 25
+      BorderSpacing.Right = 25
+      BorderSpacing.Bottom = 4
       MaxLength = 0
       TabOrder = 0
     end
     object RBThisDir: TRadioButton
-      Left = 14
+      AnchorSideLeft.Control = RBLastDir
+      AnchorSideTop.Control = RBLastDir
+      AnchorSideTop.Side = asrBottom
+      Left = 8
       Height = 22
-      Top = 65
+      Top = 50
       Width = 175
+      BorderSpacing.Top = 3
       Caption = 'Always use this directory'
       TabOrder = 1
     end
     object RBLastDir: TRadioButton
-      Left = 14
+      AnchorSideLeft.Control = RBUseProjectDir
+      AnchorSideTop.Control = RBUseProjectDir
+      AnchorSideTop.Side = asrBottom
+      Left = 8
       Height = 22
-      Top = 36
+      Top = 25
       Width = 180
+      BorderSpacing.Top = 3
       Caption = 'Use last opened directory'
       TabOrder = 2
     end
     object RBUseProjectDir: TRadioButton
-      Left = 14
+      AnchorSideLeft.Control = GBStartDir
+      Left = 8
       Height = 22
-      Top = 8
+      Top = 0
       Width = 199
+      BorderSpacing.Left = 8
       Caption = 'Use current project directory'
       Checked = True
       TabOrder = 3
       TabStop = True
     end
   end
-  object GBSearch: TGroupBox
-    Left = 0
-    Height = 129
-    Top = 456
-    Width = 803
-    Align = alTop
-    Caption = 'Search'
-    ClientHeight = 100
-    ClientWidth = 799
-    TabOrder = 2
-    object CBMatchOnlyFilename: TCheckBox
-      Left = 8
-      Height = 22
-      Top = 16
-      Width = 207
-      Caption = 'Search matches only filename'
-      TabOrder = 0
-    end
-    object CBUseAbsoluteFilenames: TCheckBox
-      Left = 8
-      Height = 22
-      Top = 48
-      Width = 176
-      Caption = 'Show absolute filenames'
-      TabOrder = 1
-    end
-    object CBUseLetters: TCheckBox
-      Left = 8
-      Height = 22
-      Top = 81
-      Width = 260
-      Caption = 'Match individual letters of search term'
-      TabOrder = 2
-    end
-  end
   object GBFileTree: TGroupBox
     Left = 0
-    Height = 113
-    Top = 343
-    Width = 803
+    Height = 90
+    Top = 302
+    Width = 504
     Align = alTop
+    AutoSize = True
     Caption = 'File browser tree'
-    ClientHeight = 84
-    ClientWidth = 799
-    TabOrder = 3
-    object CBShowFilesInline: TCheckBox
-      Left = 24
-      Height = 22
-      Top = 8
-      Width = 194
-      Caption = 'Show files in main tree view'
-      TabOrder = 0
-      OnChange = CBShowFilesInlineChange
-    end
-    object CBShowDirectoriesBeforeFiles: TCheckBox
-      AnchorSideTop.Control = CBShowFilesInline
-      AnchorSideTop.Side = asrBottom
-      Left = 52
-      Height = 22
-      Top = 38
-      Width = 197
-      BorderSpacing.Top = 8
-      Caption = 'Show directories before files'
-      TabOrder = 1
-    end
+    ClientHeight = 61
+    ClientWidth = 500
+    TabOrder = 2
     object CBSyncCurrentEditor: TCheckBox
-      AnchorSideLeft.Control = CBShowFilesInline
-      AnchorSideTop.Control = CBShowDirectoriesBeforeFiles
-      AnchorSideTop.Side = asrBottom
-      Left = 24
+      AnchorSideLeft.Control = GBFileTree
+      AnchorSideTop.Control = GBFileTree
+      Left = 8
       Height = 22
-      Top = 68
+      Top = 0
       Width = 279
-      BorderSpacing.Top = 8
+      BorderSpacing.Left = 8
       Caption = 'Keep synchronized with current editor file'
-      TabOrder = 2
+      TabOrder = 0
     end
   end
 end
