--- a/components/filebrowser/frmfilebrowser.lfm
+++ b/components/filebrowser/frmfilebrowser.lfm
@@ -2,41 +2,25 @@ object FileBrowserForm: TFileBrowserForm
   Left = 537
   Height = 467
   Top = 311
-  Width = 345
+  Width = 377
   ActiveControl = Panel1
   Caption = 'File Browser'
   ClientHeight = 467
-  ClientWidth = 345
+  ClientWidth = 377
   LCLVersion = '4.99.0.0'
   OnActivate = FormActivate
   OnCreate = FormCreate
   OnShow = FormShow
-  object TV: TTreeView
-    Left = 0
-    Height = 185
-    Top = 65
-    Width = 345
-    Align = alTop
-    HideSelection = False
-    Images = ilTreeview
-    ReadOnly = True
-    ScrollBars = ssAutoBoth
-    TabOrder = 0
-    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
-    OnDblClick = TVDblClick
-    OnExpanded = TVExpanded
-    OnSelectionChanged = TVSelectionChanged
-  end
   object Panel1: TPanel
     Left = 0
     Height = 42
     Top = 0
-    Width = 345
+    Width = 377
     Align = alTop
     BevelOuter = bvNone
     ClientHeight = 42
-    ClientWidth = 345
-    TabOrder = 1
+    ClientWidth = 377
+    TabOrder = 0
     object cbHidden: TCheckBox
       AnchorSideTop.Control = btnReload
       AnchorSideBottom.Control = btnReload
@@ -74,55 +58,69 @@ object FileBrowserForm: TFileBrowserForm
     Cursor = crVSplit
     Left = 0
     Height = 5
-    Top = 250
-    Width = 345
+    Top = 259
+    Width = 377
     Align = alTop
     ResizeAnchor = akTop
   end
   object pnlFiles: TPanel
     Left = 0
-    Height = 212
-    Top = 255
-    Width = 345
+    Height = 203
+    Top = 264
+    Width = 377
     Align = alClient
     BevelOuter = bvNone
     Caption = 'pnlFiles'
-    ClientHeight = 212
-    ClientWidth = 345
-    TabOrder = 3
+    ClientHeight = 203
+    ClientWidth = 377
+    TabOrder = 2
     object cbFilePanel: TFilterComboBox
       Left = 0
-      Height = 23
+      Height = 32
       Top = 0
-      Width = 345
+      Width = 377
       Align = alTop
       TabOrder = 0
       OnChange = cbFilePanelChange
       OnSelect = cbFilePanelSelect
     end
-    object FileListBox: TFileListBox
+    object ShellListView: TShellListView
       Left = 0
-      Height = 189
-      Top = 23
-      Width = 345
+      Height = 171
+      Top = 32
+      Width = 377
       Align = alClient
-      Directory = '/home/graemeg'
-      FileType = [ftArchive, ftNormal]
-      ItemHeight = 0
+      Color = clDefault
       TabOrder = 1
-      OnDblClick = FileListBoxDblClick
-      OnKeyPress = FileListBoxKeyPress
+      ShellTreeView = TV
+      OnDblClick = ShellListViewDblClick
+      OnKeyPress = ShellListViewKeyPress
     end
   end
   object cbTreeFilter: TFilterComboBox
     Left = 0
-    Height = 23
+    Height = 32
     Top = 42
-    Width = 345
+    Width = 377
     Align = alTop
-    TabOrder = 4
+    TabOrder = 3
     OnChange = cbTreeFilterChange
     OnSelect = cbTreeFilterChange
+  end
+  object TV: TShellTreeView
+    Left = 0
+    Height = 185
+    Top = 74
+    Width = 377
+    Align = alTop
+    HideSelection = False
+    Images = ilTreeview
+    ScrollBars = ssAutoBoth
+    TabOrder = 4
+    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
+    ShellListView = ShellListView
+    OnExpanded = TVExpanded
+    OnSelectionChanged = TVSelectionChanged
   end
   object ilTreeview: TImageList
     Left = 88
